--- a/K8s/helm/values.yaml
+++ b/K8s/helm/values.yaml
@@ -8,8 +8,8 @@ image:
 # EUM configuration
 # Provide your key and set the endpoint
 eum:
-  key: null
-  url: https://eum-eu-west-1.instana.io
+  key: mdsQ5s1GT1W2aQseo01eOg
+  url: https://eum-orange-saas.instana.io
   #url: https://eum-us-west-2.instana.io
 
 # Pod Security Policy
@@ -55,7 +55,7 @@ ratings: {}
 
 redis:
   # Storage class to use with redis statefulset.
-  storageClassName: standard
+  storageClassName: managed-csi
 
 shipping: {}
 
